Fix some odd wrapping behaviour with teasers

--- a/src/assets/scss/components/_teaser.scss
+++ b/src/assets/scss/components/_teaser.scss
@@ -162,6 +162,11 @@
 
 
 	// Variations
+	// Media (has an image)
+	&--media {
+		flex-wrap: nowrap;
+	}
+
 	// Speaker - used (large) on speaker landing page
 	&--speaker {
 		@include mq(sm) {
